@@ -5,13 +5,15 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import { document } from '@ephox/dom-globals';
+import { document, DragEvent, Element } from '@ephox/dom-globals';
 import { Arr } from '@ephox/katamari';
 import DOMUtils from './api/dom/DOMUtils';
 import Editor from './api/Editor';
+import * as Settings from './api/Settings';
 import Delay from './api/util/Delay';
 import * as MousePosition from './dom/MousePosition';
 import * as NodeType from './dom/NodeType';
+import { isUIElement } from './focus/FocusController';
 import * as Predicate from './util/Predicate';
 
 /**
@@ -261,9 +263,61 @@ const blockIeDrop = function (editor: Editor) {
   });
 };
 
+// Block files being dropped within the editor to prevent accidentally navigating away
+// while editing. Note that we can't use the `editor.on` API here, as we want these
+// to run after the editor event handlers have run. We also bind to the document
+// so that it'll try to ensure it's the last thing that runs, as it bubbles up the dom.
+const blockUnsupportedFileDrop = (editor: Editor) => {
+  const preventFileDrop = (e: DragEvent) => {
+    if (!e.defaultPrevented) {
+      // Prevent file drop events within the editor, as they'll cause the browser to navigate away
+      const dataTransfer = e.dataTransfer;
+      if (dataTransfer && (Arr.contains(dataTransfer.types, 'Files') || dataTransfer.files.length > 0)) {
+        // TODO: Add an error notification in 5.5
+        e.preventDefault();
+      }
+    }
+  };
+
+  const preventFileDropIfUIElement = (e: DragEvent) => {
+    if (isUIElement(editor, e.target as Element)) {
+      preventFileDrop(e);
+    }
+  };
+
+  const setup = () => {
+    const pageDom = DOMUtils.DOM;
+    const dom = editor.dom;
+    const doc = document;
+    const editorRoot = editor.inline ? editor.getBody() : editor.getDoc();
+
+    const eventNames = [ 'drop', 'dragover' ];
+    Arr.each(eventNames, (name) => {
+      pageDom.bind(doc, name, preventFileDropIfUIElement);
+      dom.bind(editorRoot, name, preventFileDrop);
+    });
+
+    editor.on('remove', () => {
+      Arr.each(eventNames, (name) => {
+        pageDom.unbind(doc, name, preventFileDropIfUIElement);
+        dom.unbind(editorRoot, name, preventFileDrop);
+      });
+    });
+  };
+
+  editor.on('init', () => {
+    // Use a timeout to ensure this fires after all other init callbacks
+    Delay.setEditorTimeout(editor, setup, 0);
+  });
+};
+
 const init = function (editor: Editor) {
   bindFakeDragEvents(editor);
   blockIeDrop(editor);
+
+  if (Settings.shouldBlockUnsupportedDrop(editor)) {
+    blockUnsupportedFileDrop(editor);
+  }
 };
 
 export {
