@@ -1,19 +1,28 @@
-import { Assertions, GeneralSteps, Logger, Pipeline, Step } from '@ephox/agar';
+import { Assertions, Chain, DragnDrop, GeneralSteps, Log, Logger, Pipeline, Step, UiFinder } from '@ephox/agar';
 import { UnitTest } from '@ephox/bedrock-client';
-import { document } from '@ephox/dom-globals';
+import { Blob, document, File } from '@ephox/dom-globals';
 import { Cell } from '@ephox/katamari';
-import { TinyApis, TinyLoader } from '@ephox/mcagar';
-import { Element, Hierarchy, Node } from '@ephox/sugar';
+import { ApiChains, TinyApis, TinyLoader } from '@ephox/mcagar';
+import { Body, Element, Hierarchy, Node } from '@ephox/sugar';
 import Theme from 'tinymce/themes/silver/Theme';
 
 UnitTest.asynctest('browser.tinymce.core.DragDropOverridesTest', (success, failure) => {
   Theme();
 
-  TinyLoader.setupLight(function (editor, onSuccess, onFailure) {
+  const createFile = (name: string, lastModified: number, blob: Blob): File => {
+    const newBlob: any = new Blob([ blob ], { type: blob.type });
+
+    newBlob.name = name;
+    newBlob.lastModified = lastModified;
+
+    return Object.freeze(newBlob);
+  };
+
+  TinyLoader.setup((editor, onSuccess, onFailure) => {
     const tinyApis = TinyApis(editor);
     const fired = Cell(false);
 
-    editor.on('dragend', function () {
+    editor.on('dragend', () => {
       fired.set(true);
     });
 
@@ -31,10 +40,29 @@ UnitTest.asynctest('browser.tinymce.core.DragDropOverridesTest', (success, failu
 
           Assertions.assertEq('Should fire dragend event', true, fired.get());
         })
-      ]))
+      ])),
+      Log.chainsAsStep('TINY-6027', 'Drag unsupported file into the editor/UI is prevented', [
+        Chain.inject(editor),
+        ApiChains.cSetContent('<p>Content</p>'),
+        Chain.fromIsolatedChainsWith(Element.fromDom(editor.getBody()), [
+          DragnDrop.cDropFiles([
+            createFile('test.txt', 123, new Blob([ 'content' ], { type: 'text/plain' }))
+          ]),
+          DragnDrop.cDropItems([
+            { data: 'Some content', type: 'text/plain' }
+          ], false)
+        ]),
+        Chain.fromIsolatedChainsWith(Body.body(), [
+          UiFinder.cFindIn('.tox-toolbar__primary'),
+          DragnDrop.cDropFiles([
+            createFile('test.js', 123, new Blob([ 'var a = "content";' ], { type: 'application/javascript' }))
+          ])
+        ])
+      ])
     ], onSuccess, onFailure);
   }, {
     indent: false,
+    menubar: false,
     base_url: '/project/tinymce/js/tinymce'
   }, success, failure);
 });
